crates/ditto-checker/tests/golden/type-errors/duplicate_import_module_1.ditto
module Test exports (..)

import (test-stuff) Data.Stuff as Stf
import Data.Stuff as Stf
